--- a/src/Layouts/Header/Header.module.scss
+++ b/src/Layouts/Header/Header.module.scss
@@ -1,41 +1,101 @@
 @import '../../abstracts/mixin';
-.header {
-  padding: 1rem;
+@import '../../index.scss';
+.nav {
+  background-color: #0b192e;
+  min-height: 8vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0 2rem;
   border-bottom: 1px solid rgba(#f2f2f2, 0.1);
   box-shadow: 1px 1px 1px rgba(#000, 0.2);
   .logo {
-    font-size: 2.3rem;
+    font-size: 1.6rem;
+    color: #64ffda;
     font-family: 'Pacifico', cursive;
   }
-  nav {
-    ul {
-      display: flex;
+  .nav-links {
+    display: flex;
+    align-items: center;
+    min-width: 40%;
+    margin: 0;
+    padding: 0;
+    transition: transform 0.5s ease-in-out;
+    li {
+      list-style: none;
+      a {
+        text-decoration: none;
+        font-size: 1rem;
+        font-weight: 400;
+        padding: 0.5rem 1rem;
+        color: #ccd6f6;
+        border: 3px solid transparent;
+        transition: all 0.2s;
+        position: relative;
+        &:hover {
+          color: #64ffda;
+          // background-color: rgba(#3f3e3e, 0.3);
+          // border-radius: 5px;
+          // @include text-background-clip(to right top, #c21500, #ffc500);
+          // @include text-background-clip(to right top, #aa076b, #61045f);
+          // border-image: linear-gradient(#aa076b, #61045f) 0 0 1 0;
+        }
+      }
+      &:not(:last-child) {
+        margin-right: 1rem;
+      }
+    }
+    @include media-breakpoint-down(md) {
+      min-width: 60%;
+    }
+    @include media-breakpoint-down(sm) {
+      position: absolute;
+      right: 0;
+      height: 92vh;
+      top: 8vh;
+      background-color: #0b192e;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+      width: 100%;
+      transform: translateX(100%);
       li {
-        list-style: none;
-        a {
-          text-decoration: none;
-          font-size: 1.4rem;
-          font-weight: 300;
-          padding: 0.5rem 1rem;
-          color: rgba(#fff, 0.7);
-          border: 3px solid transparent;
-          transition: all 0.2s;
-          position: relative;
-          &:hover {
-            color: rgba(#fff, 1);
-            background-color: rgba(#3f3e3e, 0.3);
-            border-radius: 5px;
-            // @include text-background-clip(to right top, #c21500, #ffc500);
-            // @include text-background-clip(to right top, #aa076b, #61045f);
-            // border-image: linear-gradient(#aa076b, #61045f) 0 0 1 0;
-          }
-        }
-        &:not(:last-child) {
-          margin-right: 1rem;
-        }
+        opacity: 0;
+      }
+    }
+  }
+  .burger {
+    display: none;
+    span {
+      display: flex;
+      width: 2rem;
+      height: 1px;
+      margin: 8px;
+      background-color: #fff;
+    }
+    @include media-breakpoint-down(sm) {
+      display: block;
+    }
+  }
+}
+.nav-bar-active {
+  @include media-breakpoint-down(sm) {
+    .nav-links {
+      transform: translateX(0%);
+      li {
+        opacity: 1;
+        margin-right: 0 !important;
+      }
+    }
+    .burger {
+      .line-1 {
+        transform: rotate(-45deg) translate(-5px, 7px);
+      }
+      .line-2 {
+        opacity: 0;
+      }
+      .line-3 {
+        transform: rotate(45deg) translate(-5px, -7px);
       }
     }
   }
