--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -1,9 +1,8 @@
-.container {
-  width: 100%;
-  height: 100vh;
-  background-color: #1a1a1a;
-  main {
-    padding: 2rem 10rem;
-    background-color: #1a1a1a;
-  }
+.header {
+  // width: 100%;
+  // height: 20vh;
+  // background-color: #1a1a1a;
+}
+main {
+  padding: 2rem 11rem;
 }
