--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
-@import './abstracts/typography';
-@import './abstracts/mixin';
+@import 'bootstrap/scss/_functions';
+@import 'bootstrap/scss/_variables';
+@import 'bootstrap/scss/mixins/_breakpoints';
 *,
 *::before,
 *::after {
@@ -7,15 +8,14 @@
   padding: 0;
   box-sizing: inherit;
 }
-:root {
-  --primary-color: #00a6ff;
-  --white: #ffff;
-  --black: #0000;
-}
 body {
   box-sizing: border-box;
   font-family: 'Lato', sans-serif;
-  // font-family: GT Walsheim, Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 62.5%;
   color: #fff;
+  width: 100vw;
+  height: 100vh;
+  @include media-breakpoint-down(sm) {
+    overflow-x: hidden;
+  }
 }
