--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,8 @@
 @import 'bootstrap/scss/_functions';
 @import 'bootstrap/scss/_variables';
 @import 'bootstrap/scss/mixins/_breakpoints';
+@import './abstracts/mixin';
+@import './abstracts/variables';
 *,
 *::before,
 *::after {
@@ -8,14 +10,21 @@
   padding: 0;
   box-sizing: inherit;
 }
+html {
+  font-size: 62.5%;
+  @include media-breakpoint-down(md) {
+    font-size: 56.25%;
+    overflow-x: hidden;
+  }
+  @include media-breakpoint-down(sm) {
+    font-size: 50%;
+    overflow-x: hidden;
+  }
+}
 body {
   box-sizing: border-box;
   font-family: 'Lato', sans-serif;
-  font-size: 62.5%;
   color: #fff;
   width: 100vw;
   height: 100vh;
-  @include media-breakpoint-down(sm) {
-    overflow-x: hidden;
-  }
 }
