--- a/src/Components/About/About.module.scss
+++ b/src/Components/About/About.module.scss
@@ -1,36 +1,65 @@
-@import '../../abstracts/mixin';
+@import '../../index.scss';
 .about-section {
   display: flex;
   flex-direction: column;
   font-family: 'Encode Sans', sans-serif;
   .what-is-my-name {
-    color: #8892af;
+    color: $primary-color;
     font-size: 1.4rem;
     font-weight: 300;
+    letter-spacing: 2px;
   }
   .intro {
-    margin-top: 1rem;
+    margin-top: 1.5rem;
     .name,
     .work-info {
-      font-size: 5rem;
+      letter-spacing: 1px;
+      font-size: 8rem;
       font-weight: bold;
     }
     .name {
-      // color: #8892af;
+      color: $grey-light;
     }
     .work-info {
-      @include text-background-clip(to right top, #aa076b, #61045f);
+      margin-top: 1.2rem;
+      color: $grey-dark;
+      // @include text-background-clip(to right top, #aa076b, #61045f);
     }
     .web {
       @include text-background-clip(to right top, #1488cc, #2b32b2);
     }
   }
   .tagline {
-    margin-top: 1rem;
-    font-size: 1.2rem;
-    width: 75%;
+    margin-top: 1.5rem;
+    font-size: 1.6rem;
+    line-height: 2rem;
+    width: 70%;
     letter-spacing: 1px;
-    color: #8892af;
-    @include text-background-clip(to right top, #159957, #155799);
+    color: $grey-dark;
+    @include media-breakpoint-down(sm) {
+      width: 100%;
+    }
+    // @include text-background-clip(to right top, #159957, #155799);
+  }
+}
+.contact-me {
+  margin-top: 4rem;
+  .btn {
+    width: 20rem;
+    padding: 1rem;
+    border: 1px solid $primary-color;
+    border-radius: 5px;
+    font-size: 1.8rem;
+    background: $bg-color;
+    color: $primary-color;
+    transition: transform 0.3s;
+    &:hover {
+      background-color: rgba($primary-color, 0.1);
+      transform: translateY(-0.3rem);
+    }
+    &:active,
+    &:focus {
+      transform: translateY(-0.1rem);
+    }
   }
 }
