--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -1,8 +1,15 @@
-.header {
-  // width: 100%;
-  // height: 20vh;
-  // background-color: #1a1a1a;
-}
-main {
-  padding: 2rem 11rem;
+@import '../../index.scss';
+.main {
+  background-color: $bg-color;
+  padding: 10rem 20rem;
+  height: 90vh;
+  @include media-breakpoint-down(lg) {
+    padding: 10rem 10rem;
+  }
+  @include media-breakpoint-down(md) {
+    padding: 10rem 10rem;
+  }
+  @include media-breakpoint-down(sm) {
+    padding: 5rem 2rem;
+  }
 }
