--- a/src/abstracts/_variables.scss
+++ b/src/abstracts/_variables.scss
@@ -6,4 +6,13 @@ $white-light: #f2f2f2;
 $grey-light: #ccd6f6;
 $grey-dark: #8892af;
 
+$linkedin-color: #0e76a8;
+$whatsapp-color: #47c657;
+$github-color: #fff;
+$instagram-color: #f14843;
+
+$logo-size: 2.5rem;
 $default-font-size: 1.6rem;
+$lg-font-size: 8rem;
+$md-font-size: 1.4rem;
+$xs-font-size: 1.2rem;
