--- a/src/Components/About/About.module.scss
+++ b/src/Components/About/About.module.scss
@@ -5,7 +5,7 @@
   font-family: 'Encode Sans', sans-serif;
   .what-is-my-name {
     color: $primary-color;
-    font-size: 1.4rem;
+    font-size: $md-font-size;
     font-weight: 300;
     letter-spacing: 2px;
   }
@@ -14,7 +14,7 @@
     .name,
     .work-info {
       letter-spacing: 1px;
-      font-size: 8rem;
+      font-size: $lg-font-size;
       font-weight: bold;
     }
     .name {
@@ -49,7 +49,7 @@
     padding: 1rem;
     border: 1px solid $primary-color;
     border-radius: 5px;
-    font-size: 1.8rem;
+    font-size: $default-font-size;
     background: $bg-color;
     color: $primary-color;
     transition: transform 0.3s;
