--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -1,7 +1,7 @@
 @import '../../index.scss';
 .main {
   background-color: $bg-color;
-  padding: 10rem 20rem;
+  padding: 10rem 18rem;
   height: 90vh;
   @include media-breakpoint-down(lg) {
     padding: 10rem 10rem;
@@ -27,7 +27,7 @@
   a {
     margin: 2rem auto;
     padding: 1rem;
-    font-size: $xs-font-size;
+    font-size: $md-font-size;
     color: $grey-dark;
     line-height: 1.6rem;
     letter-spacing: 0.1em;
@@ -77,7 +77,7 @@
         color: inherit;
         position: relative;
         transition: var(--transition);
-        font-size: 26px;
+        font-size: 28px;
         color: $grey-dark;
         transition: transform 0.3s;
         &:hover {
