--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -1,114 +1,67 @@
 @import '../../index.scss';
-.main {
-  background-color: $bg-color;
-  padding: 10rem 18rem;
-  height: 90vh;
-  @include media-breakpoint-down(lg) {
-    padding: 10rem 10rem;
-  }
-  @include media-breakpoint-down(md) {
-    padding: 10rem 10rem;
-  }
-  @include media-breakpoint-down(sm) {
-    padding: 5rem 2rem;
-  }
-}
-.social-icons,
-.email {
-  @include media-breakpoint-down(sm) {
-    display: none;
-  }
-}
-.email {
-  position: fixed;
-  bottom: 0;
-  left: auto;
-  right: 2rem;
-  z-index: 10;
-  color: $white;
-  width: 4rem;
+.about-section {
   display: flex;
   flex-direction: column;
-  a {
-    margin: 2rem auto;
-    padding: 1rem;
+  .what-is-my-name {
+    color: $primary-color;
     font-size: $md-font-size;
-    color: $grey-dark;
-    line-height: 1.6rem;
-    letter-spacing: 0.1em;
-    writing-mode: vertical-rl;
-    text-decoration: none;
-    list-style: none;
-    transition: transform 0.3s;
-    &:hover {
-      color: $primary-color;
-      transform: translateY(-0.3rem);
+    font-weight: 300;
+    letter-spacing: 2px;
+    font-family: 'Eczar', serif;
+  }
+  .intro {
+    margin-top: 1.5rem;
+    .name,
+    .work-info {
+      letter-spacing: 1px;
+      font-size: $lg-font-size;
+      font-family: 'Eczar', serif;
+      font-weight: bold;
+    }
+    .name {
+      color: $grey-light;
+    }
+    .work-info {
+      margin-top: 1.2rem;
+      color: $grey-dark;
+      // @include text-background-clip(to right top, #aa076b, #61045f);
+    }
+    .web {
+      font-family: inherit;
+      @include text-background-clip(to right top, #1488cc, #2b32b2);
     }
   }
-  &::after {
-    content: '';
-    display: block;
-    width: 1px;
-    height: 9rem;
-    margin: 0px auto;
-    background-color: $grey-dark;
+  .tagline {
+    margin-top: 1.5rem;
+    font-size: 1.6rem;
+    line-height: 2rem;
+    width: 70%;
+    letter-spacing: 1px;
+    color: $grey-dark;
+    @include media-breakpoint-down(sm) {
+      width: 100%;
+    }
+    // @include text-background-clip(to right top, #159957, #155799);
   }
 }
-
-.social-icons {
-  position: fixed;
-  bottom: 0;
-  left: 2rem;
-  right: auto;
-  width: 4rem;
-  z-index: 10;
-  ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
-    li {
-      list-style: none;
-      padding: 4px;
-      &:last-of-type {
-        margin-bottom: 2rem;
-      }
-      a {
-        display: inline-block;
-        text-decoration: none;
-        text-decoration-skip-ink: auto;
-        color: inherit;
-        position: relative;
-        transition: var(--transition);
-        font-size: 28px;
-        color: $grey-dark;
-        transition: transform 0.3s;
-        &:hover {
-          transform: translateY(-0.3rem);
-        }
-      }
-      .linkedin:hover {
-        color: $linkedin-color;
-      }
-      .whatsapp:hover {
-        color: $whatsapp-color;
-      }
-      .github:hover {
-        color: $github-color;
-      }
-      .instagram:hover {
-        color: $instagram-color;
-      }
+.contact-me {
+  margin-top: 4rem;
+  .btn {
+    width: 20rem;
+    padding: 1rem;
+    border: 1px solid $primary-color;
+    border-radius: 5px;
+    font-size: $default-font-size;
+    background: $bg-color;
+    color: $primary-color;
+    transition: transform 0.3s;
+    &:hover {
+      background-color: rgba($primary-color, 0.1);
+      transform: translateY(-0.3rem);
     }
-    &:after {
-      display: block;
-      content: '';
-      width: 1px;
-      height: 9rem;
-      margin: 0px auto;
-      background-color: $grey-dark;
+    &:active,
+    &:focus {
+      transform: translateY(-0.1rem);
     }
   }
 }
