--- a/src/Components/About/About.module.scss
+++ b/src/Components/About/About.module.scss
@@ -1,3 +1,105 @@
+@import 'bootstrap/scss/_functions';
+@import 'bootstrap/scss/_variables';
+@import 'bootstrap/scss/mixins/_breakpoints';
 .about {
-  height: 90vh;
+  &-header {
+    color: var(--grey-light);
+    font-size: 3rem;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    margin: 0;
+    width: 50%;
+    // background-color: violet;
+    &:after {
+      display: inline-block;
+      content: '';
+      // width: 20rem;
+      width: 65%;
+      height: 1px;
+      margin-left: 2rem;
+      background-color: var(--grey-dark);
+    }
+  }
+  &-body {
+    margin-top: 4rem;
+    color: var(--grey-dark);
+    display: flex;
+    gap: 5rem;
+
+    .info {
+      width: 50%;
+      font-size: 1.6rem;
+      font-weight: 300;
+      line-height: 2rem;
+      letter-spacing: 1px;
+      text-align: justify;
+      color: var(--grey-dark) p {
+
+      }
+      .known-technologies {
+        .sub-heading {
+          font-weight: 400;
+          margin-top: 1.6rem;
+        }
+        .skills {
+          display: flex;
+          margin-top: 1.6rem;
+          flex-wrap: wrap;
+          span {
+            min-width: 50%;
+            margin-bottom: 1rem;
+            font-weight: 700;
+            font-size: 1.4rem;
+            display: flex;
+            align-items: center;
+            transition: all 0.3s;
+            &::before {
+              display: inline-block;
+              content: '';
+              width: 0;
+              height: 0;
+              border-top: 6px solid transparent;
+              border-bottom: 6px solid transparent;
+              border-right: 6px solid transparent;
+              border-left: 6px solid var(--primary-color);
+            }
+            &:hover {
+              color: var(--primary-color);
+              transform: translateY(-0.3rem);
+            }
+          }
+        }
+      }
+    }
+    .profile-container {
+      position: relative;
+      .profile {
+        max-width: 100%;
+        height: 320px;
+        border-radius: 0.5rem;
+        cursor: pointer;
+        z-index: 100;
+        position: relative;
+        transition: transform 0.4s;
+      }
+      .image-border {
+        position: absolute;
+        top: 3rem;
+        left: 3rem;
+        width: 100%;
+        height: 320px;
+        border: 3px solid var(--primary-color);
+        border-radius: 0.5rem;
+        z-index: 10;
+        transition: transform 0.4s;
+      }
+      .profile:hover {
+        transform: translateX(0.5rem) translateY(0.5rem);
+        ~ .image-border {
+          transform: translateX(-0.5rem) translateY(-0.5rem);
+        }
+      }
+    }
+  }
 }
