--- a/src/Components/UI/SocialIcons.module.scss
+++ b/src/Components/UI/SocialIcons.module.scss
@@ -1,4 +1,6 @@
-@import '../../index.scss';
+@import 'bootstrap/scss/_functions';
+@import 'bootstrap/scss/_variables';
+@import 'bootstrap/scss/mixins/_breakpoints';
 .social-icons {
   position: fixed;
   bottom: 0;
@@ -27,23 +29,23 @@
         position: relative;
         transition: var(--transition);
         font-size: 28px;
-        color: $grey-dark;
+        color: var(--grey-dark);
         transition: transform 0.3s;
         &:hover {
           transform: translateY(-0.3rem);
         }
       }
       .linkedin:hover {
-        color: $linkedin-color;
+        color: var(--linkedin-color);
       }
       .whatsapp:hover {
-        color: $whatsapp-color;
+        color: var(--whatsapp-color);
       }
       .github:hover {
-        color: $github-color;
+        color: var(--github-color);
       }
       .instagram:hover {
-        color: $instagram-color;
+        color: var(--instagram-color);
       }
     }
     &:after {
@@ -52,7 +54,7 @@
       width: 1px;
       height: 9rem;
       margin: 0px auto;
-      background-color: $grey-dark;
+      background-color: var(--grey-dark);
     }
   }
 }
@@ -68,15 +70,15 @@
   left: auto;
   right: 2rem;
   z-index: 10;
-  color: $white;
+  color: var(--white);
   width: 4rem;
   display: flex;
   flex-direction: column;
   a {
     margin: 2rem auto;
     padding: 1rem;
-    font-size: $md-font-size;
-    color: $grey-dark;
+    font-size: var(--md-font-size);
+    color: var(--grey-dark);
     line-height: 1.6rem;
     letter-spacing: 0.1em;
     writing-mode: vertical-rl;
@@ -84,7 +86,7 @@
     list-style: none;
     transition: transform 0.3s;
     &:hover {
-      color: $primary-color;
+      color: var(--primary-color);
       transform: translateY(-0.3rem);
     }
   }
@@ -94,6 +96,6 @@
     width: 1px;
     height: 9rem;
     margin: 0px auto;
-    background-color: $grey-dark;
+    background-color: var(--grey-dark);
   }
 }
