--- a/src/Layouts/Header/Header.module.scss
+++ b/src/Layouts/Header/Header.module.scss
@@ -1,11 +1,14 @@
-@import '../../index.scss';
+@import 'bootstrap/scss/_functions';
+@import 'bootstrap/scss/_variables';
+@import 'bootstrap/scss/mixins/_breakpoints';
 header {
-  background-color: $bg-color;
+  background-color: var(--bg-color);
   // box-shadow: 0 1rem 3rem -1rem rgba($grey-dark, 0.1);
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
+  transition: transform 0.4s;
   .nav {
     display: flex;
     align-items: center;
@@ -13,8 +16,8 @@ header {
     padding: 0 2rem;
     min-height: 7vh;
     .logo {
-      font-size: $logo-size;
-      color: $primary-color;
+      font-size: var(--logo-size);
+      color: var(--primary-color);
       font-family: 'Pacifico', cursive;
     }
     .nav-links {
@@ -28,7 +31,7 @@ header {
         list-style: none;
         a {
           text-decoration: none;
-          font-size: $default-font-size;
+          font-size: var(--default-font-size);
           font-weight: 400;
           padding: 0.5rem 1rem;
           color: #ccd6f6;
@@ -36,7 +39,7 @@ header {
           transition: all 0.2s;
           position: relative;
           &:hover {
-            color: $primary-color;
+            color: var(--primary-color);
             // background-color: rgba(#3f3e3e, 0.3);
             // border-radius: 5px;
             // @include text-background-clip(to right top, #c21500, #ffc500);
@@ -56,7 +59,7 @@ header {
         right: 0;
         height: 90vh;
         top: 10vh;
-        background-color: $bg-color;
+        background-color: var(--bg-color);
         flex-direction: column;
         align-items: center;
         justify-content: space-evenly;
@@ -74,7 +77,7 @@ header {
         width: 3rem;
         height: 1px;
         margin: 8px;
-        background-color: $white;
+        background-color: var(--white);
       }
       @include media-breakpoint-down(sm) {
         display: block;
@@ -105,8 +108,9 @@ header {
   }
 }
 .hide {
-  display: none;
+  // display: none;
+  transform: translateY(-7vh);
 }
 .shadow {
-  box-shadow: 0 1rem 3rem -1rem rgba($grey-dark, 0.1);
+  box-shadow: 0 1rem 3rem -1rem rgba(var(--grey-dark), 0.1);
 }
