--- a/src/Components/About/About.module.scss
+++ b/src/Components/About/About.module.scss
@@ -10,13 +10,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-grow: 2;
+    flex-shrink: 2;
     margin: 0;
     width: 50%;
-    // background-color: violet;
     &:after {
+      flex-grow: 1;
+      flex-shrink: 1;
       display: inline-block;
       content: '';
-      width: 65%;
       height: 1px;
       margin-left: 2rem;
       background-color: var(--grey-dark);
