experience code update

--- a/src/Components/Experience/Experience.module.scss
+++ b/src/Components/Experience/Experience.module.scss
@@ -3,6 +3,7 @@
 @import 'bootstrap/scss/mixins/_breakpoints';
 .experience {
   //   margin: 8rem 0 15rem 0;
+  color: aliceblue;
   &-header {
     color: var(--grey-light);
     font-size: 3rem;
