--- a/src/Components/Experience/Experience.module.scss
+++ b/src/Components/Experience/Experience.module.scss
@@ -2,7 +2,8 @@
 @import 'bootstrap/scss/_variables';
 @import 'bootstrap/scss/mixins/_breakpoints';
 .experience {
-  //   margin: 8rem 0 15rem 0;
+  margin: 8rem 0 15rem 0;
+
   color: aliceblue;
   &-header {
     color: var(--grey-light);
@@ -14,7 +15,7 @@
     flex-grow: 2;
     flex-shrink: 2;
     margin: 0;
-    width: 80%;
+    width: 65%;
     &:after {
       flex-grow: 1;
       flex-shrink: 1;
@@ -29,7 +30,34 @@
     }
   }
   &-body {
-    margin-top: 4rem;
-    // color: var(--grey-dark);
+    margin-top: 2.5rem;
+    display: flex;
+    flex-grow: 1;
+    // height: 224px;
+    padding: 0 8rem 0 1rem;
+    .tab-heading-container {
+      min-width: fit-content;
+      .tab-header {
+        align-items: flex-start;
+        font-family: inherit;
+        font-size: 1.4rem;
+        font-weight: 400;
+        color: var(--primary-color);
+      }
+      button {
+        padding: 0;
+      }
+    }
+    .tab-body {
+      padding: 1.4rem 0 0 2rem;
+      text-align: justify;
+      p {
+        font-family: inherit;
+        font-size: 1.4rem;
+        font-weight: 300;
+        line-height: 2rem;
+        letter-spacing: 1px;
+      }
+    }
   }
 }
