--- a/src/Components/Experience/Experience.module.scss
+++ b/src/Components/Experience/Experience.module.scss
@@ -3,7 +3,6 @@
 @import 'bootstrap/scss/mixins/_breakpoints';
 .experience {
   margin: 8rem 0 15rem 0;
-
   color: aliceblue;
   &-header {
     color: var(--grey-light);
@@ -37,15 +36,14 @@
     padding: 0 8rem 0 1rem;
     .tab-heading-container {
       min-width: fit-content;
+      // min-width: 13%;
       .tab-header {
-        align-items: flex-start;
+        // align-items: flex-start;
         font-family: inherit;
         font-size: 1.4rem;
         font-weight: 400;
         color: var(--primary-color);
-      }
-      button {
-        padding: 0;
+        gap: 2rem;
       }
     }
     .tab-body {
@@ -58,6 +56,13 @@
         line-height: 2rem;
         letter-spacing: 1px;
       }
+    }
+  }
+  &-body-sm {
+    flex-direction: column;
+    padding: 0;
+    .tab-body {
+      padding: 2rem 0;
     }
   }
 }
