--- a/src/abstracts/_variables.scss
+++ b/src/abstracts/_variables.scss
@@ -14,7 +14,9 @@
 
   --logo-size: 2.5rem;
   --default-font-size: 1.6rem;
-  --lg-font-size: 8rem;
-  --md-font-size: 1.4rem;
+  --xlg-font-size: 10rem;
+  --lg-font-size: 7rem;
+  --md-font-size: 3.8rem;
+  --sm-font-size: 1.4rem;
   --xs-font-size: 1.2rem;
 }
