--- a/src/Components/About/About.module.scss
+++ b/src/Components/About/About.module.scss
@@ -5,7 +5,7 @@
   margin: 8rem 0 15rem 0;
   &-header {
     color: var(--grey-light);
-    font-size: 3rem;
+    font-size: var(--md-font-size);
     font-weight: 700;
     display: flex;
     align-items: center;
@@ -35,7 +35,7 @@
     padding: 0 8rem 0 1rem;
     .info {
       // width: 65%;
-      font-size: 1.6rem;
+      font-size: var(--default-font-size);
       font-weight: 300;
       line-height: 2rem;
       letter-spacing: 1px;
@@ -57,7 +57,7 @@
             min-width: 50%;
             margin-bottom: 1rem;
             font-weight: 700;
-            font-size: 1.4rem;
+            font-size: var(--sm-font-size);
             display: flex;
             align-items: center;
             transition: all 0.3s;
