activated links in website

--- a/src/Components/UI/SocialIcons.module.scss
+++ b/src/Components/UI/SocialIcons.module.scss
@@ -71,7 +71,7 @@
   a {
     margin: 2rem auto;
     padding: 1rem;
-    font-size: var(--md-font-size);
+    font-size: var(--sm-font-size);
     color: var(--grey-dark);
     line-height: 1.6rem;
     letter-spacing: 0.1em;
