--- a/src/abstracts/_variables.scss
+++ b/src/abstracts/_variables.scss
@@ -20,3 +20,5 @@
   --sm-font-size: 1.4rem;
   --xs-font-size: 1.2rem;
 }
+// radial-gradient(farthest-side at 60% 80%, #733236, transparent)
+// #160C21
