--- a/src/Components/About/About.module.scss
+++ b/src/Components/About/About.module.scss
@@ -41,6 +41,10 @@
       letter-spacing: 1px;
       text-align: justify;
       color: var(--grey-dark);
+      a {
+        color: var(--primary-color);
+        text-decoration: none;
+      }
       @include media-breakpoint-down(md) {
         width: 100%;
       }
@@ -100,7 +104,7 @@
         left: 2rem;
         width: 100%;
         height: 320px;
-        border: 3px solid var(--primary-color);
+        border: 1px solid var(--primary-color);
         border-radius: 0.5rem;
         z-index: 10;
         transition: transform 0.4s;
