--- a/src/Components/Experience/Experience.module.scss
+++ b/src/Components/Experience/Experience.module.scss
@@ -32,7 +32,6 @@
     margin-top: 2.5rem;
     display: flex;
     flex-grow: 1;
-    // height: 224px;
     padding: 0 8rem 0 1rem;
     .tab-heading-container {
       min-width: fit-content;
@@ -54,36 +53,43 @@
       font-weight: 300;
       line-height: 2rem;
       letter-spacing: 1px;
+      height: 320px;
+      overflow: auto;
       .role {
-        font-size: 2.3rem;
-        font-weight: 600;
-        margin-bottom: 1rem;
-        .org {
-          color: var(--primary-color);
+        &:not(:last-child) {
+          margin-bottom: 3rem;
         }
-      }
-      .serve-year {
-        display: inline-block;
-        margin-bottom: 2rem;
-        font-style: italic;
-      }
-      .works {
-        font-size: var(--default-font-size);
-        p {
-          display: flex;
-          align-items: center;
-          text-align: justify;
+        .designation {
+          font-size: 2.3rem;
+          font-weight: 600;
+          margin-bottom: 1rem;
+          .org {
+            color: var(--primary-color);
+          }
         }
-        p::before {
+        .serve-year {
           display: inline-block;
-          content: '';
-          margin: 0 1rem;
-          width: 0;
-          height: 0;
-          border-left: 0.7rem solid var(--primary-color);
-          border-top: 0.7rem solid transparent;
-          border-right: 0.7rem solid transparent;
-          border-bottom: 0.7rem solid transparent;
+          margin-bottom: 2rem;
+          font-style: italic;
+        }
+        .works {
+          font-size: var(--default-font-size);
+          p {
+            display: flex;
+            align-items: center;
+            text-align: justify;
+          }
+          p::before {
+            display: inline-block;
+            content: '';
+            margin: 0 1rem;
+            width: 0;
+            height: 0;
+            border-left: 0.7rem solid var(--primary-color);
+            border-top: 0.7rem solid transparent;
+            border-right: 0.7rem solid transparent;
+            border-bottom: 0.7rem solid transparent;
+          }
         }
       }
     }
