--- a/src/Components/About/About.module.scss
+++ b/src/Components/About/About.module.scss
@@ -2,7 +2,6 @@
 @import 'bootstrap/scss/_variables';
 @import 'bootstrap/scss/mixins/_breakpoints';
 .about {
-  margin: 8rem 0 15rem 0;
   &-header {
     color: var(--grey-light);
     font-size: var(--md-font-size);
@@ -10,8 +9,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-grow: 2;
-    flex-shrink: 2;
     margin: 0;
     width: 65%;
     &:after {
@@ -29,18 +26,16 @@
   }
   &-body {
     margin-top: 2.5rem;
-    color: var(--grey-dark);
     display: flex;
     gap: 5rem;
     padding: 0 8rem 0 1rem;
     .info {
-      // width: 65%;
       font-size: var(--default-font-size);
       font-weight: 300;
       line-height: 2rem;
       letter-spacing: 1px;
       text-align: justify;
-      color: var(--grey-dark);
+      color: var(--grey-light);
       a {
         color: var(--primary-color);
         text-decoration: none;
@@ -88,32 +83,46 @@
       .Tilt {
         position: relative;
         z-index: 100;
+        width: 250px;
+        height: 320px;
         .profile {
-          max-width: 100%;
+          width: 100%;
           height: 320px;
+          object-fit: cover;
           border-radius: 0.5rem;
           cursor: pointer;
           z-index: 100;
           position: relative;
           transition: transform 0.4s;
         }
+        &::after {
+          display: inline-block;
+          content: '';
+          position: absolute;
+          top: 2.5rem;
+          left: 2rem;
+          width: 100%;
+          height: 100%;
+          border: 1px solid var(--primary-color);
+          border-radius: 0.5rem;
+          z-index: 10;
+          transition: transform 0.4s;
+        }
       }
-      .image-border {
-        position: absolute;
-        top: 2.5rem;
-        left: 2rem;
-        width: 100%;
-        height: 320px;
-        border: 1px solid var(--primary-color);
-        border-radius: 0.5rem;
-        z-index: 10;
-        transition: transform 0.4s;
-      }
-      .Tilt:hover ~ .image-border {
-        transform: translateX(1.5rem) translateY(2.5rem);
-      }
+      // .Tilt:hover ::after {
+      //   transform: translateX(1.5rem) translateY(2.5rem);
+      // }
       @include media-breakpoint-down(lg) {
         margin: auto;
+      }
+      @include media-breakpoint-down(lg) {
+        .Tilt {
+          width: 210px;
+          height: 210px;
+          .profile {
+            height: 210px;
+          }
+        }
       }
     }
     @include media-breakpoint-down(lg) {
