--- a/src/abstracts/_variables.scss
+++ b/src/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 :root {
-  --bg-color: #0b192e;
+  // --bg-color: #0b192e;
+  --bg-color: #160c21;
   --primary-color: #64ffda;
   --black: #000;
   --white: #fff;
@@ -12,7 +13,7 @@
   --github-color: #fff;
   --instagram-color: #f14843;
 
-  --logo-size: 2.5rem;
+  --logo-size: 5rem;
   --default-font-size: 1.6rem;
   --xlg-font-size: 10rem;
   --lg-font-size: 7rem;
