--- a/src/Components/About/About.module.scss
+++ b/src/Components/About/About.module.scss
@@ -2,6 +2,7 @@
 @import 'bootstrap/scss/_variables';
 @import 'bootstrap/scss/mixins/_breakpoints';
 .about {
+  // background: radial-gradient(farthest-side at -50% 50%, #733236, transparent);
   &-header {
     color: var(--grey-light);
     font-size: var(--md-font-size);
@@ -93,6 +94,19 @@
           cursor: pointer;
           z-index: 100;
           position: relative;
+          transition: transform 0.4s;
+        }
+        &::before {
+          display: inline-block;
+          content: '';
+          position: absolute;
+          top: 2rem;
+          left: 2rem;
+          width: 100%;
+          height: 100%;
+          border: 1px solid var(--primary-color);
+          border-radius: 0.5rem;
+          z-index: 10;
           transition: transform 0.4s;
         }
         &::after {
