--- a/src/Components/Contact/Contact.module.scss
+++ b/src/Components/Contact/Contact.module.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
+  gap: 1.6rem;
   color: var(--white);
   .what-is-next {
     color: var(--primary-color);
@@ -18,6 +18,7 @@
   }
   .contact-txt {
     font-size: var(--lg-font-size);
+    color: var(--grey-light);
     font-weight: 700;
   }
   .why-contact {
