--- a/src/Components/Experience/Experience.module.scss
+++ b/src/Components/Experience/Experience.module.scss
@@ -11,7 +11,9 @@
     justify-content: space-between;
     margin: 0;
     width: 65%;
-    &:after {
+    &::after {
+      flex-grow: 1;
+      flex-shrink: 1;
       display: inline-block;
       content: '';
       height: 1px;
@@ -86,13 +88,12 @@
       }
       &::-webkit-scrollbar {
         width: 0.3rem;
-      }
-      &::-webkit-scrollbar-track {
-        background-color: var(--grey-dark);
-        -webkit-box-shadow: none;
-      }
-      &::-webkit-scrollbar-thumb {
-        background: var(--primary-color);
+        &-track {
+          background-color: var(--grey-dark);
+        }
+        &-thumb {
+          background: var(--primary-color);
+        }
       }
     }
   }
