--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -3,12 +3,13 @@
 @import 'bootstrap/scss/mixins/_breakpoints';
 @import '../../abstracts/mixin';
 .home {
+  // background: radial-gradient(farthest-side at 50% 60%, #733236, transparent);
   .what-is-my-name {
     color: var(--primary-color);
     font-size: var(--sm-font-size);
     font-weight: 300;
     letter-spacing: 2px;
-    font-family: 'Eczar', serif;
+    // font-family: 'Eczar', serif;
   }
   .intro {
     margin-top: 1.5rem;
