--- a/src/abstracts/_mixin.scss
+++ b/src/abstracts/_mixin.scss
@@ -17,18 +17,24 @@
 @mixin btn($color, $bg-color) {
   width: 20rem;
   padding: 1rem;
-  border: 1px solid $color;
+  // border: 1px solid $color;
+  border: none;
   border-radius: 5px;
   font-family: inherit;
   font-size: var(--default-font-size);
-  font-weight: 600;
-  background: $bg-color;
-  color: $color;
+  font-weight: 400;
+  // background: $bg-color;
+  // color: $color;
   cursor: pointer;
-  transition: transform 0.3s;
+  transition: all 0.3s;
+  background: linear-gradient(90deg, #00d5f7 0, #53df83);
+  color: #fff;
+  box-shadow: 0 4px 17px 0 #53df83;
   &:hover {
-    background-color: rgba($color, 0.1);
-    transform: translateY(-0.3rem);
+    // background-color: rgba($color, 0.1);
+    // transform: translateY(-0.3rem);
+    background: linear-gradient(90deg, #00bae8 0, #03ce97);
+    box-shadow: 0 0 0 0 #53df83;
   }
   &:active,
   &:focus {
