--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,8 @@
   margin: 0;
   padding: 0;
   box-sizing: inherit;
-  font-family: 'Lato', sans-serif;
+  // font-family: 'Lato', sans-serif;
+  font-family: 'Maven Pro', sans-serif;
 }
 html {
   font-size: 62.5%;
