--- a/src/abstracts/_variables.scss
+++ b/src/abstracts/_variables.scss
@@ -2,6 +2,8 @@
   // --bg-color: #0b192e;
   --bg-color: #160c21;
   --primary-color: #64ffda;
+  --secondary-color-1: #53df83;
+  --secondary-color-2: #00d5f7;
   --black: #000;
   --white: #fff;
   --white-light: #f2f2f2;
