--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,22 +1,20 @@
 @import 'bootstrap/scss/_functions';
 @import 'bootstrap/scss/_variables';
 @import 'bootstrap/scss/mixins/_breakpoints';
-.container {
-  height: 100vh;
-  scroll-snap-type: y mandatory;
-  overflow-y: scroll;
-}
+
 .main {
   background-color: var(--bg-color);
   padding: 0 18rem;
   display: flex;
   flex-direction: column;
   section {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    scroll-snap-align: start;
+    margin: 20vh 0 10vh 0;
+    @include media-breakpoint-down(lg) {
+      margin: 14vh 0;
+    }
+    @include media-breakpoint-down(sm) {
+      margin: 12vh 0;
+    }
   }
   @include media-breakpoint-down(lg) {
     padding: 10rem 10rem;
