--- a/src/abstracts/_mixin.scss
+++ b/src/abstracts/_mixin.scss
@@ -19,21 +19,25 @@
   padding: 1rem;
   // border: 1px solid $color;
   border: none;
-  border-radius: 5px;
-  font-family: inherit;
+  border-radius: 50rem;
   font-size: var(--default-font-size);
-  font-weight: 400;
+  font-weight: 600;
+  letter-spacing: 1px;
   // background: $bg-color;
   // color: $color;
   cursor: pointer;
   transition: all 0.3s;
-  background: linear-gradient(90deg, #00d5f7 0, #53df83);
+  background: linear-gradient(
+    90deg,
+    var(--secondary-color-2) 0,
+    var(--secondary-color-1)
+  );
   color: #fff;
-  box-shadow: 0 4px 17px 0 #53df83;
+  box-shadow: 0 4px 17px 0 var(--secondary-color-1);
   &:hover {
     // background-color: rgba($color, 0.1);
-    // transform: translateY(-0.3rem);
-    background: linear-gradient(90deg, #00bae8 0, #03ce97);
+    transform: translateY(-0.3rem);
+    // background: linear-gradient(90deg, #00bae8 0, #03ce97);
     box-shadow: 0 0 0 0 #53df83;
   }
   &:active,
