--- a/src/Components/About/About.module.scss
+++ b/src/Components/About/About.module.scss
@@ -3,6 +3,13 @@
 @import 'bootstrap/scss/mixins/_breakpoints';
 .about {
   // background: radial-gradient(farthest-side at -50% 50%, #733236, transparent);
+  margin: 20vh 0 10vh 0;
+  @include media-breakpoint-down(lg) {
+    margin: 14vh 0;
+  }
+  @include media-breakpoint-down(sm) {
+    margin: 12vh 0;
+  }
   &-header {
     color: var(--grey-light);
     font-size: var(--md-font-size);
