--- a/src/Components/Experience/Experience.module.scss
+++ b/src/Components/Experience/Experience.module.scss
@@ -2,6 +2,13 @@
 @import 'bootstrap/scss/_variables';
 @import 'bootstrap/scss/mixins/_breakpoints';
 .experience {
+  padding: 20vh 0 10vh 0;
+  @include media-breakpoint-down(lg) {
+    padding: 14vh 0;
+  }
+  @include media-breakpoint-down(sm) {
+    padding: 12vh 0;
+  }
   &-header {
     color: var(--grey-light);
     font-size: var(--md-font-size);
