--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -4,6 +4,13 @@
 @import '../../abstracts/mixin';
 .home {
   // background: radial-gradient(farthest-side at 50% 60%, #733236, transparent);
+  margin: 20vh 0 10vh 0;
+  @include media-breakpoint-down(lg) {
+    margin: 14vh 0;
+  }
+  @include media-breakpoint-down(sm) {
+    margin: 12vh 0;
+  }
   .what-is-my-name {
     color: var(--primary-color);
     font-size: var(--sm-font-size);
