--- a/src/abstracts/_variables.scss
+++ b/src/abstracts/_variables.scss
@@ -12,7 +12,7 @@
 
   --linkedin-color: #0e76a8;
   --whatsapp-color: #47c657;
-  --github-color: #fff;
+  --github-color: #000;
   --instagram-color: #f14843;
 
   --logo-size: 5rem;
