mobile view fix

--- a/src/abstracts/_variables.scss
+++ b/src/abstracts/_variables.scss
@@ -1,9 +1,9 @@
 :root {
-  // --bg-color: #0b192e;
   --bg-color: #160c21;
   --primary-color: #64ffda;
   --secondary-color-1: #53df83;
   --secondary-color-2: #00d5f7;
+  --green-light: #95d5b2;
   --black: #000;
   --white: #fff;
   --white-light: #f2f2f2;
