--- a/src/Components/About/About.module.scss
+++ b/src/Components/About/About.module.scss
@@ -36,7 +36,7 @@
     margin-top: 2.5rem;
     display: flex;
     gap: 5rem;
-    padding: 0 8rem 0 1rem;
+    padding: 0 7rem 0 1rem;
     .info {
       font-size: var(--default-font-size);
       font-weight: 300;
@@ -44,7 +44,11 @@
       letter-spacing: 1px;
       text-align: justify;
       color: var(--grey-light);
-      // max-width: 70%;
+      // background: radial-gradient(
+      //   farthest-side at 50% 50%,
+      //   #733236,
+      //   transparent
+      // );
       a {
         color: var(--primary-color);
         text-decoration: none;
@@ -136,7 +140,7 @@
               border-radius: 6px;
               line-height: 50px;
               text-align: center;
-              background: #fff;
+              background: var(--white-light);
               font-size: 32px;
               color: #333;
               margin: 0 6px;
@@ -185,7 +189,7 @@
           position: absolute;
           bottom: 0;
           left: 0;
-          background: #fff;
+          background: var(--white-light);
           width: 100%;
           height: 100px;
           z-index: 1;
